# team-mind

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agent-os/: gaps.md
agent-os/product/: future-work.md  mission.md  roadmap.md
agent-os/specs/: index.yml
agent-os/standards/: bdd.md  best-practices.md  code-style.md  cso.md  directory-boundary.md  git-worktrees.md  git.md  guardrails.md  index.yml  observability.md  tech-stack.md  testing.md
src/team_mind_mcp/: __init__.py  cli.py  discovery.py  feedback.py  ingestion.py  ingestion_plugin.py  lifecycle.py  markdown.py  media_types.py  retrieval.py  server.py  storage.py  tenant_manager.py  tenant_plugin.py  test_plugins.py
tests/core/: test_cli.py  test_composite_scoring.py  test_delete_operations.py  test_discovery_plugin.py  test_doc_updates.py  test_doc_weights.py  test_doctype_model.py  test_doctype_registry.py  test_event_filter.py  test_event_filter_semantic.py  test_feedback_tenant.py  test_feedback_tool.py  test_get_document_with_segments.py  test_get_parent_aggregate_score.py  test_idempotent_ingestion.py  test_ingest_observer.py  test_ingest_processor.py  test_ingestion_bundle_event.py  test_ingestion_event.py  test_ingestion_loop.py  test_ingestion_plugin.py  test_ingestion_routing.py  test_initial_score_seeding.py  test_markdown_plugin.py  test_markdown_reliability.py  test_markdown_semantic.py  test_mcp_cli_semantic.py  test_mcp_gateway.py  test_metadata_filters.py  test_optional_vector_query.py  test_packaging.py  test_parent_id_in_results.py  test_per_tenant_lifecycle.py  (+19 more)
(+183 files in other folders)
