[project]
name = "team-mind-mcp"
version = "0.1.0"
description = "Team Mind Core Engine MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.1",
]

[project.scripts]
team-mind-mcp = "team_mind_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_mind_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
